manifests/nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: config
        configMap:
          name: my-configmap1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service1
  namespace: api
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 80
    name: https


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config2
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: config2
        configMap:
          name: my-configmap2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service2
  namespace: api
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 80
    name: https
